--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <div style="padding: 10px; position: fixed; left: 0; bottom: 0; z-index: 10000">
-      <img src="media/img/LOGOal.png" style="max-width: 64px">
+      <a href="https://artsandletters.xyz/" style="max-width: 64px"> <img src="media/img/LOGOal.png" style="max-width: 64px"></a>
     </div>
 
     <div class="reveal">
