--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>XYZ Editorial and Animation</title>
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/api.js?onload=onLibraryLoaded" async defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="The interactive course for WebVR.">
@@ -19,6 +22,44 @@
   </head>
 
   <body>
+    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>.
+    <button onclick="onSignInClicked()">Sign in with button onClick</button>
+    <script>
+      function onLibraryLoaded() {
+        gapi.load('auth2', function() {
+          gapi.auth2.init({
+            client_id: 'YOUR_CLIENT_ID.apps.googleusercontent.com',
+            scope: 'profile'
+          })
+        })
+      }
+
+      function onSignInClicked() {
+        gapi.load('auth2', function() {
+          gapi.auth2.signIn().then(function(googleUser) {
+            console.log('user signed in')
+          }, function(error) {
+            console.log('user failed to sign in')
+          })
+        })
+      }
+    </script>
+    <script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+      }
+    </script>
     <div style="padding: 10px; position: fixed; left: 0; bottom: 0; z-index: 10000">
       <a href="https://artsandletters.xyz/" style="max-width: 64px"> <img src="media/img/LOGOal.png" style="max-width: 64px"></a>
     </div>
