--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>XYZ Editorial and Animation</title>
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/api.js?onload=onLibraryLoaded" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="The interactive course for WebVR.">
@@ -19,63 +19,73 @@
     <link rel="stylesheet" href="src/lib/highlight.css">
     <script src="src/lib/print-and-pdf-export.js"></script>
     <link rel="stylesheet" href="src/main.css">
+
+    <script src="https://apis.google.com/js/api:client.js"></script>
+  <script>
+  var googleUser = {};
+  var startApp = function() {
+    gapi.load('auth2', function(){
+      // Retrieve the singleton for the GoogleAuth library and set up the client.
+      auth2 = gapi.auth2.init({
+        client_id: 'YOUR_CLIENT_ID.apps.googleusercontent.com',
+        cookiepolicy: 'single_host_origin',
+        // Request scopes in addition to 'profile' and 'email'
+        //scope: 'additional_scope'
+      });
+      attachSignin(document.getElementById('customBtn'));
+    });
+  };
+
+  function attachSignin(element) {
+    console.log(element.id);
+    auth2.attachClickHandler(element, {},
+        function(googleUser) {
+          document.getElementById('name').innerText = "Signed in: " +
+              googleUser.getBasicProfile().getName();
+        }, function(error) {
+          alert(JSON.stringify(error, undefined, 2));
+        });
+  }
+  </script>
+
   </head>
 
   <body>
-    <script>
-      function onLibraryLoaded() {
-        gapi.load('auth2', function() {
-          gapi.auth2.init({
-            client_id: 'YOUR_CLIENT_ID.apps.googleusercontent.com',
-            scope: 'profile'
-          })
-        })
-      }
-
-      function onSignInClicked() {
-        gapi.load('auth2', function() {
-          gapi.auth2.signIn().then(function(googleUser) {
-            console.log('user signed in')
-          }, function(error) {
-            console.log('user failed to sign in')
-          })
-        })
-      }
-
-    </script>
-    <button onclick="onSignInClicked()">
-      Sign in with button onClick
-    </button>
-
-    <script>
-      function onSignIn(googleUser) {
-    if(googleUser.getHostedDomain() !== 'mysite.com') {
-        // show a Not Authorized message
-    } else {
-        // show the users dashboard
-    }
-}
-</script>
-    <script>
-      function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());
-
-        // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().id_token;
-        console.log("ID Token: " + id_token);
-      }
-    </script>
     <div style="padding: 10px; position: fixed; left: 0; bottom: 0; z-index: 10000">
-      <a href="https://artsandletters.xyz/" style="max-width: 64px"> <img src="media/img/LOGOal.png" style="max-width: 64px"></a>
-    </div>
+      <div id="gSignInWrapper"><a href="https://artsandletters.xyz/" style="max-width: 64px"> <img src="media/img/LOGOal.png" style="max-width: 64px"></a>
 
+
+        <span class="label">Sign in with:</span>
+        <div id="customBtn" class="customGPlusSignIn">
+          <span class="icon"></span>
+          <span class="buttonText">Sign in</span>
+        </div>
+      </div>
+      <div id="name"></div>
+      <script>startApp();</script>
+
+    </div>
+      <script>
+        function onSuccess(googleUser) {
+          console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+        }
+        function onFailure(error) {
+          console.log(error);
+        }
+        function renderButton() {
+          gapi.signin2.render('my-signin2', {
+            'scope': 'profile email',
+            'width': 110,
+            'height': 40,
+            'longtitle': false,
+            'theme': 'dlight',
+            'onsuccess': onSuccess,
+            'onfailure': onFailure
+          });
+        }
+      </script>
+
+      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     <div class="reveal">
       <div class="slides">
         <section
@@ -84,7 +94,9 @@
           data-separator-vertical="\r?\n---\r?\n"
           data-separator-notes="<!-- NOTES -->"></section>
       </div>
+
     </div>
+
     <script src="src/vendor/lib/js/head.min.js"></script>
     <script src="src/vendor/js/reveal.js"></script>
     <script src="src/main.js"></script>
