--- a/index.html
+++ b/index.html
@@ -27,17 +27,14 @@
 
   <body>
     <div style="padding: 10px; position: fixed; left: 0; bottom: 0; z-index: 10000">
-      <div id="gSignInWrapper"><a href="https://artsandletters.xyz/" style="max-width: 64px"> <img src="media/img/LOGOal.png" style="max-width: 64px"></a>
+    <a href="https://artsandletters.xyz/" style="max-width: 64px"> <img src="media/img/LOGOal.png" style="max-width: 64px"></a>
 
 
-        <span class="label">Sign in with:</span>
-        <div id="customBtn" class="customGPlusSignIn">
-          <span class="icon"></span>
-          <span class="buttonText">Sign in</span>
-        </div>
+
+
       </div>
-      <div id="name"></div>
-      <script>startApp();</script>
+
+    
 
     </div>
 
